--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="get_random" />
+    <string name="app_name">Vier Apps</string>
+    <string name="counter_app">Counter</string>
+    <string name="random_app">Random</string>
+    <string name="stop_app">Stop Watch</string>
+    <string name="date_app">Date</string>
+    <string name="toast_text">Toast</string>
+    <string name="count_text">Count</string>
+    <string name="reset_text">Reset</string>
+    <string name="toast_value">Raised One!</string>
+    <string name="get_random">Get Number</string>
 </resources>
