CountDown now works, Cleaned up for Date

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,14 @@
     <string name="reset_text">Reset</string>
     <string name="toast_value">Raised One!</string>
     <string name="get_random">Get Number</string>
-    <string name="min_num">Enter Minimum</string>
-    <string name="max_num">Enter Maximize</string>
+    <string name="min_num">Enter Min</string>
+    <string name="max_num">Enter max</string>
     <string name="count_down">Count Down</string>
     <string name="birthday">Birthday!</string>
     <string name="day_date">Day</string>
     <string name="month_value">Month</string>
     <string name="year_value">Year</string>
     <string name="life">You Have Lived For!</string>
+    <string name="count_in_minute">Count Minutes</string>
+    <string name="time_up">Time Up!</string>
 </resources>
