--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="life">You Have Lived For!</string>
     <string name="count_in_minute">Count Minutes</string>
     <string name="time_up">Time Up!</string>
+    <string name="reset_countDown">Reset Count</string>
 </resources>
