Mache Universität Erfordernisse
imporoved Counter app a bit
SharedPreferences for counter app
Broadcast Reciver for battery connect and disconnect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="count_in_minute">Count Minutes</string>
     <string name="time_up">Time Up!</string>
     <string name="reset_countDown">Reset Count</string>
+    <string name="battery_broadcast">"Battery BroadCast"</string>
+    <string name="power_connected">On Power \'n light</string>
+    <string name="power_disconnected">No Power \'n Dark</string>
 </resources>
